--- a/Vision Mobile.css
+++ b/Vision Mobile.css
@@ -23,10 +23,7 @@
 
 .post-attribution {
   flex-direction: column;
-}
-
-.reblog-parent-name {
-  margin-left: -5px;
+  align-items: flex-start;
 }
 
 #credit {
